--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "basebase-js-sdk",
+  "name": "basebase",
   "version": "1.0.0",
   "description": "BaseBase SDK for Javascript/Typescript - Firebase-like API for BaseBase server",
   "type": "module",
@@ -48,12 +48,12 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/your-org/basebase-js-sdk.git"
+    "url": "https://github.com/grenager/basebase-js-sdk.git"
   },
   "bugs": {
-    "url": "https://github.com/your-org/basebase-js-sdk/issues"
+    "url": "https://github.com/grenager/basebase-js-sdk/issues"
   },
-  "homepage": "https://github.com/your-org/basebase-js-sdk#readme",
+  "homepage": "https://github.com/grenager/basebase-js-sdk#readme",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
